# sadelica-new-world

./: .eslintignore  .eslintrc.yaml  .gitignore  CMakeLists.txt  README  README.md  build.js  index.html  main.js  package - Copy.json  package.json  tsconfig.json  tsconfig.vite.json  vite.config.js
cpp/: CMakeLists.txt  Logger.h  Logging.h  Main.cpp  Main2.cpp  MainClient.cpp  MainServer.cpp  Makefile  README  README.md  imgui.ini  logger.h  precompiled.h  toolchain.cmake  watch.sh
cpp/assets/: example.html
cpp/assets/in2/: core.js  main.compiled.js
cpp/assets/res/: res.txt
cpp/game/: actions.cpp  actions.h  cliContext.cpp  cliContext.h  context.h  dispatchAction.h  payloads.h  resultAction.h  sharedState.h  sharedStateStructs.h  srvContext.cpp
cpp/game/in2/: in2.cpp  in2.h
cpp/game/state/: actions.h  cliResultProcessor.cpp  cliResultProcessor.h  clidispatch.cpp  clidispatch.h  clistate.h  dispatch.h  result.h  srvstate.h  state.cpp  state.h  statecli.h  statesrv.h
cpp/game/state/actions/: actions.cpp  dispatchAction.h  payloads.h  resultAction.h
cpp/game/state/stateClient/: dispatch.cpp  dispatch.h  stateClient.h  stateClientContext.cpp  stateClientContext.h
cpp/game/state/stateClient/loopbackHandlers/: handlerLoopConnection.cc  handlerLoopIn2.cc  loopbackHandlers.h
cpp/game/state/stateClient/resultHandlers/: handlerResultConnection.cc  handlerResultIn2.cc  resultHandlers.cpp  resultHandlers.h
cpp/game/state/stateServer/: stateServer.h  stateServerContext.cpp  stateServerContext.h
cpp/game/state/stateServer/dispatchHandlers/: dispatchHandlers.h  handlerDispatchConnection.cc  handlerDispatchIn2.cc
cpp/game/stateClient/: cliContext.cpp  cliContext.h  cliDispatch.cpp  cliDispatch.h  cliLoopbackHandlers.cpp  cliLoopbackProcessor.cpp  cliLoopbackProcessor.h  cliResultProcessor.cpp  cliResultProcessor.h  cliState.cpp  cliState.h  dispatch.cpp  stateClient.cpp  stateClient.h
cpp/game/stateClient/loopbackHandlers/: connectionLoopbackHandlers.cc  handlerLoopConnection.cc  handlerLoopIn2.cc  in2Handlers.cpp  in2LoopHandlers.cc  loopbackHandlers.cpp  loopbackHandlers.h
cpp/game/stateClient/resultHandlers/: connectionResultHandlers.cc  handlerResultConnection.cc  handlerResultIn2.cc  in2ResultHandlers.cc  resultHandlers.cpp  resultHandlers.h
cpp/game/stateServer/: srvContext.cpp  srvContext.h  srvDispatchProcessor.cpp  srvDispatchProcessor.h  srvResult.cpp  srvResult.h  srvState.cpp  srvState.h  stateServer.cpp  stateServer.h
cpp/game/stateServer/dispatchHandlers/: connectionSrvHandlers.cc  dispatchHandlers.cpp  dispatchHandlers.h  handlerDispatchConnection.cc  handlerDispatchIn2.cc  in2SrvHandlers.cc
cpp/lib/betterenum/: enum.h
cpp/lib/dispatch/: dispatch.h
cpp/lib/duktape/: duktape.cpp
cpp/lib/duktape/duktape-2.7.0/: duk_config.h  duk_source_meta.json  duktape.h
cpp/lib/duktape/duktape-2.7.0/duktape-src/: duk_config.h  duk_source_meta.json  duktape.c  duktape.h
cpp/lib/imgui/: imgui_demo.cpp  imgui_impl_sdl.cpp  imgui_sdl.cpp
cpp/lib/in2/: in2.cpp  in2.h
cpp/lib/json/: jsonHelpers.h
cpp/lib/net/: client.cpp  client.h  config.h  server.cpp  server.h
cpp/lib/recurstruct/: recurstruct.h
cpp/lib/sdl2wrapper/: Animation.cpp  AssetLoader.cpp  Events.cpp  Events.h  Logger.cpp  Logger.h  Store.cpp  Store.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  Window.cpp  Window.h
cpp/lib/tiled/: tiled.cpp  tiled.h
cpp/src/: CMakeLists.txt  Main.cpp
cpp/src/imgui/: imgui_demo.cpp
cpp/src/sdl2wrapper/: Animation.cpp  AssetLoader.cpp  Events.cpp  Events.h  Window.cpp  Window.h
cpp/src/ui/: Ui.cpp  Ui.h
cpp/src/ui/components/: InGameCmpt.cpp  InGameCmpt.h  TalkCmpt.cpp
cpp/test/: Logger.test.cpp  logger.test.cpp
cpp/test/in2/: In2.test.cpp  in2.test.cpp  main.compiled.mock.js
cpp/test/net/: netMock.test.cpp
cpp/test/sdl2wrapper/: Gauge.test.cpp
cpp/test/state/: ClientState.test.cpp  ServerState.test.cpp  clientState.test.cpp
cpp/test/tiled/: Tiled.test.cpp
cpp/test/ui/: ClientTalk.test.cpp  ClientTalkCmpt.test.cpp  ServerTalk.test.cpp  ServerTalkCmpt.test.cpp  TalkCmpt.test.cpp
cpp/ui/: Elements.cpp  Elements.h  Ui.cpp  Ui.h
cpp/ui/components/: InGameCmpt.cpp  InGameCmpt.h  TalkCmpt.cpp  TalkCmpt.h
cpp/utils/: utils.cpp  utils.h
(+270 files in other folders)
